improve code in general update to latest Indigo version remove commands for later reimplementation in Indigo framework